import Gestor from "./gestor";

export default class GestionKilometraje implements Gestor{

    gestionar() {
        
    }
}