@startuml DriveHub
 
'Preguntas:
'Garage Entidad encargada de todo? 
'Podemos hacer una interfaz para las Gestiones?'

'Garage Pulpo derivador de Tareas'
'Interfaz Gestor de tarifas'

class Garage{
    - arrayVehiculos:Vehiculo[]
}

'Relaciones'
Garage *-d- Vehiculo
GestionReserva ..> Cliente
Vehiculo .l.> Mantenimiento

' Voltear '
GestionTarifa <.r. Garage
GestionKilometraje <.d. Garage
GestionReserva <.l. Garage

abstract class Vehiculo{
    - matricula: string
    - estado: string
    - tarifa: number
    - disponibilidad: boolean
    - kilometrosRecorridos: number
    - cargo: number
 
    + settersYgetters()
}

'kmIniciales y kmFinales para calcular km para tarifa
'super() para extender'
'cargo lo heredan los 3'
class Compacto extends Vehiculo{
    + settersYgetters()
}

class Sedan extends Vehiculo{

    + settersYgetters()
}

class Suv extends Vehiculo{

    - cargoFijoAdicional: number
    + settersYgetters()
}

class Cliente {
    - vehiculo: Vehiculo

    + settersYgetters()
}

class GestionReserva{

    - fechaInicio: Date
    - fechaFin: Date

    + validarDisponibilidad():
    + calcularDiasDeUso()
    + alquilarVehiculo(arrayVehiculos:Vehiculo[]): Vehiculo
    + settersYgetters()
}

'+ calcularDiasDeUso() --> FECHA FIN - FECHA INICIO = CANT DE DIAS DE USO'
'Biblioteca Moment'
'pedirle al usuario cant de dias de uso y hacer el calculo con ese ingreso

class GestionTarifa{

    + calcularTarifa(vehiculo:Vehiculo)
    + settersYgetters()
}

class GestionKilometraje{

    + settersYgetters()
}

class Mantenimiento{
    - costoMantenimiento: number
    - fechaMantenimiento: Date

    + settersYgetters()
}

@enduml